--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,26 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
-    repositories {
+buildscript{
+    repositories{
         google()
-        jcenter()
-        
+        mavenCentral()
+
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
-		classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+    dependencies{
+        classpath 'com.android.tools.build:gradle:7.0.4'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-allprojects {
-    repositories {
+allprojects{
+    repositories{
         google()
-        jcenter()
-		maven { url "https://jitpack.io" }
+        mavenCentral()
+        maven{url "https://jitpack.io"}
     }
 }
 
-task clean(type: Delete) {
+task clean(type: Delete){
     delete rootProject.buildDir
 }
