--- a/librarysqlitefichamilitar/build.gradle
+++ b/librarysqlitefichamilitar/build.gradle
@@ -2,13 +2,11 @@
 apply plugin: 'com.android.library'
 
 android{
-    compileSdkVersion 32
+    compileSdkVersion 33
     buildToolsVersion '31.0.0'
     defaultConfig{
         minSdkVersion 22
-        targetSdkVersion 32
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -20,6 +18,7 @@ android{
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.example.librarysqlitefichamilitar'
 
 }
 
