--- a/librarysqlitefichamilitar/build.gradle
+++ b/librarysqlitefichamilitar/build.gradle
@@ -2,13 +2,11 @@
 apply plugin: 'com.android.library'
 
 android{
-    compileSdkVersion 32
+    compileSdkVersion 33
     buildToolsVersion '31.0.0'
     defaultConfig{
-        minSdkVersion 22
-        targetSdkVersion 32
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion 23
+        targetSdkVersion 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -20,14 +18,15 @@ android{
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.example.librarysqlitefichamilitar'
 
 }
 
 dependencies{
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
