--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android{
-    compileSdkVersion 33
-    buildToolsVersion '31.0.0'
+    compileSdk 33
+    buildToolsVersion = "31.0.0"
     defaultConfig{
         applicationId "com.example.librarysqiltefichamilitar"
-        minSdkVersion 23
-        targetSdkVersion 33
+        minSdk 23
+        targetSdk 33
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
