--- a/librarysqlitefichamilitar/build.gradle
+++ b/librarysqlitefichamilitar/build.gradle
@@ -2,11 +2,11 @@
 apply plugin: 'com.android.library'
 
 android{
-    compileSdkVersion 33
-    buildToolsVersion '31.0.0'
+    compileSdk 33
+    buildToolsVersion = "31.0.0"
     defaultConfig{
-        minSdkVersion 23
-        targetSdkVersion 33
+        minSdk 23
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
