Atualiza para JAVA 18 e retira as configurações para a publicação de package no github packages

--- a/librarysqlitefichamilitar/build.gradle
+++ b/librarysqlitefichamilitar/build.gradle
@@ -24,7 +24,10 @@ android{
             baseline = file("lint-baseline.xml")
         }
     }
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_18
+        targetCompatibility JavaVersion.VERSION_18
+    }
 }
 
 
