--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android{
         }
     }
     namespace 'com.example.librarysqiltefichamilitar'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_18
+        targetCompatibility JavaVersion.VERSION_18
+    }
 }
 
 dependencies{
