Downgrade para JAVA 8

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android{
     }
     namespace 'com.example.librarysqiltefichamilitar'
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_18
-        targetCompatibility JavaVersion.VERSION_18
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
