--- a/librarysqlitefichamilitar/build.gradle
+++ b/librarysqlitefichamilitar/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.library'
 
 android{
     compileSdk 34
+    buildToolsVersion = "34.0.0"
     defaultConfig{
         minSdk 23
         targetSdk 34
