Teste donwgrade sdk

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Dec 18 10:18:10 AMT 2023
-sdk.dir=/home/dtidev-21/Android/Sdk
+#Thu Jan 18 13:30:59 BRT 2024
+sdk.dir=/home/jonathan/Android/Sdk
