--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 18 13:30:59 BRT 2024
-sdk.dir=/home/jonathan/Android/Sdk
+#Fri Jan 19 09:36:33 AMT 2024
+sdk.dir=/home/dtidev-21/Android/Sdk
