--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 18 11:15:10 AMT 2024
-sdk.dir=/home/dtidev-23/Android/Sdk
+#Mon Jul 28 09:52:57 AMT 2025
+sdk.dir=C\:\\Users\\mayco\\AppData\\Local\\Android\\Sdk
