--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,9 @@ buildscript{
     }
     dependencies{
         classpath 'com.android.tools.build:gradle:8.8.2'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // gradle superior with erro no lib boletim geral
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:3.0.5'
+        classpath 'com.google.gms:google-services:4.4.3'
     }
 }
 
