--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,17 +9,12 @@ android{
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-    buildTypes{
-        release{
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
+
     namespace 'com.example.librarysqiltefichamilitar'
 }
 
 dependencies{
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+  /*  implementation fileTree(dir: 'libs', include: ['*.jar'])*/
     implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
