--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+apply plugin: 'maven-publish'
 buildscript{
     repositories{
         google()
@@ -8,7 +8,6 @@ buildscript{
     }
     dependencies{
         classpath 'com.android.tools.build:gradle:8.8.2'
-        classpath 'com.google.gms:google-services:4.4.3'
     }
 }
 
