Remove Firebase Crashlytics e atualiza texto do Snackbar
- Remove a dependência `firebase-crashlytics-gradle` do arquivo `build.gradle` raiz.
- Remove o plugin `com.google.firebase.crashlytics` do arquivo `librarysqlitefichamilitar/build.gradle`.
- Remove a dependência de teste `junit` do arquivo `app/build.gradle`.
- Altera o texto do Snackbar em `MainActivity.java` para "Substitua por sua própria ação" e a ação para "ação".

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,22 @@
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-# For more details on how to configure your build environment visit
+# As configurações de gradle configuradas através do IDE *substituirão *
+# Quaisquer configurações especificadas neste arquivo.
+# Para mais detalhes sobre como configurar sua visita ao ambiente de construção
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
- # When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
+# Especifica os argumentos da JVM usados para o processo Daemon.
+# A configuração é particularmente útil para ajustar as configurações de memória.
+ # Quando configurado, o gradle será executado incubando o modo paralelo.
+# Esta opção deve ser usada apenas com projetos desacoplados. Mais detalhes, visite
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-# AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app's APK
+# Estrutura de pacote Androidx para torná -lo mais claro quais pacotes são incluídos com o
+# Sistema operacional Android e que são embalados com o apk do seu aplicativo
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding\=UTF-8
+org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 android.enableJetifier=true
+android.buildFeatures.buildConfig = true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
 
