--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'maven-publish'
 android{
     compileSdk 35
     defaultConfig{
         applicationId "com.example.librarysqiltefichamilitar"
         minSdk 24
         versionCode 1
-        versionName "1.0"
+        versionName "1.0" 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -14,8 +14,9 @@ android{
 }
 
 dependencies{
-  /*  implementation fileTree(dir: 'libs', include: ['*.jar'])*/
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation project(':librarysqlitefichamilitar')
 }
