--- a/librarysqlitefichamilitar/build.gradle
+++ b/librarysqlitefichamilitar/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
+apply plugin: 'maven-publish'
+group='com.github.dtipmam'
 android{
     compileSdk 35
     defaultConfig{
         minSdk 24
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
     }
 
 
@@ -12,7 +12,28 @@ android{
 
 }
 
+/*afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                artifact bundleReleaseAar
+                artifact sourcesJar // Opcional: inclui fontes
+                groupId = 'com.github.dtipmam'
+                artifactId = 'librarysqlitefichamilitar'
+                version = '2.0.0'
+            }
+        }
+    }
+}*/
+
 dependencies{
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.7.1'
-    testImplementation 'junit:junit:4.13.2'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+}
+// Tarefa sourcesJar deve estar no mesmo arquivo do módulo Android
+tasks.register('sourcesJar', Jar) {
+    from android.sourceSets.main.java.srcDirs
+    archiveClassifier.set('sources')
 }
