--- a/librarysqlitefichamilitar/build.gradle
+++ b/librarysqlitefichamilitar/build.gradle
@@ -1,5 +1,5 @@
-apply plugin: 'com.android.application'
 apply plugin: 'maven-publish'
+apply plugin: 'com.android.library'
 group='com.github.dtipmam'
 android{
     compileSdk 35
@@ -7,33 +7,13 @@ android{
         minSdk 24
     }
 
-
     namespace 'com.example.librarysqlitefichamilitar'
 
 }
 
-/*afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                artifact bundleReleaseAar
-                artifact sourcesJar // Opcional: inclui fontes
-                groupId = 'com.github.dtipmam'
-                artifactId = 'librarysqlitefichamilitar'
-                version = '2.0.0'
-            }
-        }
-    }
-}*/
 
 dependencies{
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.7.1'
-    implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
-}
-// Tarefa sourcesJar deve estar no mesmo arquivo do módulo Android
-tasks.register('sourcesJar', Jar) {
-    from android.sourceSets.main.java.srcDirs
-    archiveClassifier.set('sources')
 }
