--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,4 +18,5 @@ dependencies{
     implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     implementation project(':librarysqlitefichamilitar')
+    implementation 'com.google.android.material:material:1.12.0'
 }
