--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,5 @@
 org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 android.enableJetifier=true
-android.buildFeatures.buildConfig = true
-android.nonTransitiveRClass=false
-android.nonFinalResIds=false
+org.gradle.unsafe.configuration-cache=true
 
