Update Material dependency and Gradle properties
This commit updates the Material Components library to version 1.12.0 in the `app/build.gradle` file.

It also modifies `gradle.properties` to:
- Enable the Gradle configuration cache (`org.gradle.unsafe.configuration-cache=true`).
- Remove the following properties:
    - `android.buildFeatures.buildConfig`
    - `android.nonTransitiveRClass`
    - `android.nonFinalResIds`

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':app', ':librarysqlitefichamilitar'
+ include ':app', ':librarysqlitefichamilitar'
+rootProject.name='LibrarySqliteFichaMilitar'
