Adiciona plugin maven-publish e configura publicação
Este commit adiciona o plugin `maven-publish` ao arquivo `build.gradle` e configura uma publicação chamada `release`.

A publicação está configurada com:
- `groupId`: `io.jitpack`
- `artifactId`: `librarysqlitefichamilitar`
- `version`: `1.0`

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,14 @@
+apply plugin: 'maven-publish'
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'io.jitpack'
+            artifactId = 'librarysqlitefichamilitar'
+            version = '1.0'
+        }
+    }
+}
+
 
 buildscript{
     repositories{
